--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -288,7 +288,7 @@ header {
 	width: 100%;
 	height: 80px;
 	/* background-color: #231F20; */
-	background-color: #9a0017;
+	background-image: linear-gradient(to right, #700318, #e5456c, #700318);
 	border: 1px solid #ff7ba1;
 	-webkit-transition: all 0.3s ease-in-out 0s;
     -moz-transition: all 0.3s ease-in-out 0s;
@@ -1300,7 +1300,7 @@ footer .inner-content p a:hover b {
 }
 @media (min-width: 1024px) {
     header .navbar{
-        padding: 13px 0;
+        padding: 10px 0;
     }
     .navbar .navbar-nav .nav-item {
         margin: 0px 5px;
